new image, fixing CSS for command control!

--- a/main.css
+++ b/main.css
@@ -5,7 +5,7 @@
 }
 
 html {
-	background: url(http://img13.imageshack.us/img13/6776/5ryh.jpg) no-repeat center center fixed; 
+	background: url(gaia.jpg) no-repeat center center fixed; 
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
 	-o-background-size: cover;
