--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2106,11 +2106,11 @@
 		margin: 0 0 1.5em 0;
 	}
 
-	header h2 + p {
-		font-size: 1.25em;
-		margin-top: -1em;
-		line-height: 1.75em;
-	}
+	/*	header h2 + p {
+			font-size: 1.25em;
+			margin-top: -1em;
+			line-height: 1.75em;
+		}*/
 
 	header h3 + p {
 		font-size: 1.1em;
