--- a/www/css/main.less
+++ b/www/css/main.less
@@ -1,3 +1,13 @@
+.cf:before,
+.cf:after {
+    content: " ";
+    display: table;
+}
+
+.cf:after {
+    clear: both;
+}
+
 html {
   box-sizing: border-box;
 }
@@ -14,10 +24,39 @@ body {
 
 }
 
-#main {
+* {
+  color: white;
+}
+
+article {
   background: rgba(0, 0, 0, 0.75);
   max-width: 850px;
   margin: 0 auto;
+
+  a {
+    color: white;
+    text-decoration: none;
+
+    header {
+      padding: 20px;
+      background: rgba(0, 0, 0, 0.5);
+      display: inline-block;
+      margin: 15px 0 0 15px;
+
+      img.logo {
+        float: left;
+        margin-right: 20px;
+        height: 80px;
+      }
+      h1 {
+        margin-top: 0;
+      }
+      h3 {
+        margin-top: 0;
+        margin-bottom: 0
+      }
+    }
+  }
 }
 
 
@@ -29,26 +68,37 @@ body {
     position: relative;
     width: 200px;
     height: 200px;
-    padding: 5px;
-    background: rgba(123, 234, 123, 0.5);
     float: left;
     margin: 5px 10px 5px 0;
+    color: white;
 
     &:nth-of-type(4n+1) {
       margin-left: 10px;
     }    
 
-    .title {
-      font-size: 1.1em;
-      font-weight: bold;
-      margin-bottom: 5px;
-      a {
-        text-decoration: none;
+    .tile-content {
+      background: rgba(0, 0, 0, 0.5);
+      padding: 15px;
+      .title {
+        font-size: 1.1em;
+        font-weight: bold;
+        margin-bottom: 10px;
+        a {
+          color: white;
+          text-decoration: none;
+          border-bottom: 3px solid white;
+          transition: all 500ms ease-out;
+
+          &:hover {
+            color: grey;
+            border-bottom: 3px solid grey;
+          }
+        }
       }
-    }
 
-    .desc {
+      .desc {
 
+      }
     }
   }
 }
