--- a/www/css/main.css
+++ b/www/css/main.css
@@ -26,25 +26,23 @@ article {
   max-width: 850px;
   margin: 0 auto;
 }
-article a {
-  color: white;
-  text-decoration: none;
-}
-article a header {
+article header {
   padding: 20px;
   background: rgba(0, 0, 0, 0.5);
   display: inline-block;
   margin: 15px 0 0 15px;
+  color: white;
+  text-decoration: none;
 }
-article a header img.logo {
+article header img.logo {
   float: left;
   margin-right: 20px;
   height: 80px;
 }
-article a header h1 {
+article header h1 {
   margin-top: 0;
 }
-article a header h3 {
+article header h3 {
   margin-top: 0;
   margin-bottom: 0;
 }
@@ -73,7 +71,6 @@ article a header h3 {
   margin-bottom: 10px;
 }
 .tiles .tile .tile-content .title a {
-  color: white;
   text-decoration: none;
   border-bottom: 3px solid white;
   transition: all 500ms ease-out;
@@ -82,10 +79,32 @@ article a header h3 {
   color: grey;
   border-bottom: 3px solid grey;
 }
-#stripe-form {
+.tiles .tile .tile-content .desc a {
+  text-decoration: none;
+  border-bottom: 3px solid white;
+  transition: all 500ms ease-out;
+}
+.tiles .tile .tile-content .desc a:hover {
+  color: grey;
+  border-bottom: 3px solid grey;
+}
+.tiles .tile .tile-content .desc strong {
+  font-size: 1.2em;
+}
+.equity {
+  display: inline-block;
+  padding: 15px;
+  margin: 15px;
+  background: rgba(0, 0, 0, 0.5);
+}
+.equity strong {
+  font-weight: bold;
+  font-size: 1.2em;
+}
+.equity #stripe-form {
   height: 35px;
 }
-#stripe-button {
+.equity #stripe-button {
   box-shadow: rgba(255, 255, 255, 0.247059) 0px 1px 0px 0px inset;
   color: #ffffff;
   cursor: pointer;
@@ -99,7 +118,7 @@ article a header h3 {
   align-self: flex-start;
   perspective-origin: 58.5312px 15px;
   transform-origin: 58.5312px 15px;
-  background: #1275ff linear-gradient(#7dc5ee, #008cdd 85%, #30a2e4) repeat scroll 0% 0% auto padding-box border-box;
+  background: #1275ff linear-gradient(#7dc5ee, #008cdd 85%, #30a2e4);
   border: 0px none #ffffff;
   border-radius: 4px 4px 4px 4px;
   font: normal normal bold normal 14px / 30px 'Helvetica Neue', Helvetica, Arial, sans-serif;
