--- a/www/css/main.css
+++ b/www/css/main.css
@@ -18,6 +18,9 @@ html {
   background: url(https://i.imgur.com/HFDc8be.jpg) no-repeat center center fixed;
   background-size: cover;
 }
+body {
+  height: 100vh;
+}
 * {
   color: white;
 }
@@ -25,12 +28,15 @@ article {
   background: rgba(0, 0, 0, 0.75);
   max-width: 850px;
   margin: 0 auto;
+  position: relative;
+  top: 50%;
+  transform: translateY(-50%);
 }
 article header {
   padding: 20px;
   background: rgba(0, 0, 0, 0.5);
   display: inline-block;
-  margin: 15px 0 0 15px;
+  margin: 10px 0 0 10px;
   color: white;
   text-decoration: none;
 }
@@ -51,15 +57,8 @@ article header h3 {
   padding: 5px 0;
 }
 .tiles .tile {
-  position: relative;
-  width: 200px;
   height: 200px;
   float: left;
-  margin: 5px 10px 5px 0;
-  color: white;
-}
-.tiles .tile:nth-of-type(4n+1) {
-  margin-left: 10px;
 }
 .tiles .tile .tile-content {
   background: rgba(0, 0, 0, 0.5);
@@ -91,10 +90,47 @@ article header h3 {
 .tiles .tile .tile-content .desc strong {
   font-size: 1.2em;
 }
+@media (max-width: 430px) {
+  .tiles .tile {
+    width: calc(100% - 10px);
+    min-width: 200px;
+    margin: 5px 10px 5px 10px;
+    height: auto;
+  }
+}
+@media (min-width: 430px) and (max-width: 640px) {
+  .tiles .tile {
+    width: calc(50% - 15px);
+    min-width: 200px;
+    margin: 5px 10px 5px 0;
+  }
+  .tiles .tile:nth-of-type(2n+1) {
+    margin-left: 10px;
+  }
+}
+@media (min-width: 640px) and (max-width: 850px) {
+  .tiles .tile {
+    width: calc(33.33% - 13.34px);
+    min-width: 200px;
+    margin: 5px 10px 5px 0;
+  }
+  .tiles .tile:nth-of-type(3n+1) {
+    margin-left: 10px;
+  }
+}
+@media (min-width: 850px) {
+  .tiles .tile {
+    width: 200px;
+    margin: 5px 10px 5px 0;
+  }
+  .tiles .tile:nth-of-type(4n+1) {
+    margin-left: 10px;
+  }
+}
 .equity {
   display: inline-block;
   padding: 15px;
-  margin: 15px;
+  margin: 10px;
   background: rgba(0, 0, 0, 0.5);
 }
 .equity strong {
