--- a/www/css/main.less
+++ b/www/css/main.less
@@ -21,7 +21,7 @@ html {
 }
 
 body {
-
+  height: 100vh;
 }
 
 * {
@@ -47,11 +47,15 @@ article {
   max-width: 850px;
   margin: 0 auto;
 
+  position: relative;
+  top: 50%;
+  transform: translateY(-50%);
+
   header {
     padding: 20px;
     background: rgba(0, 0, 0, 0.5);
     display: inline-block;
-    margin: 15px 0 0 15px;
+    margin: 10px 0 0 10px;
     color: white;
     text-decoration: none;
 
@@ -70,21 +74,18 @@ article {
   }
 }
 
+
+
+
+
 .tiles{
   display: inline-block;
   padding: 5px 0;
 
   .tile {
-    position: relative;
-    width: 200px;
+
     height: 200px;
     float: left;
-    margin: 5px 10px 5px 0;
-    color: white;
-
-    &:nth-of-type(4n+1) {
-      margin-left: 10px;
-    }    
 
     .tile-content {
       background: rgba(0, 0, 0, 0.5);
@@ -105,12 +106,64 @@ article {
       }
     }
   }
+
+  // TODO: http://isotope.metafizzy.co/
+  // SUCH A MESS!
+
+  @media (max-width: 430px) {
+    .tile {
+      width: ~"calc(100% - 10px)";
+      min-width: 200px;
+      margin: 5px 10px 5px 10px;
+      height: auto;
+    }
+  }
+
+  @media (min-width: 430px) and (max-width: 640px) {
+    .tile {
+      width: ~"calc(50% - 15px)";
+      min-width: 200px;
+      margin: 5px 10px 5px 0;
+
+      &:nth-of-type(2n+1) {
+        margin-left: 10px;
+      }
+    }
+  }
+
+  @media (min-width: 640px) and (max-width: 850px) {
+    .tile {
+      width: ~"calc(33.33% - 13.34px)";
+      min-width: 200px;
+      margin: 5px 10px 5px 0;
+
+      &:nth-of-type(3n+1) {
+        margin-left: 10px;
+      }
+    }
+  }
+
+  @media (min-width: 850px) {
+    .tile {
+      width: 200px;
+      margin: 5px 10px 5px 0;
+
+      &:nth-of-type(4n+1) {
+        margin-left: 10px;
+      }
+    }
+  }
+
 }
+
+
+
+
 
 .equity {
   display: inline-block;
   padding: 15px;
-  margin: 15px;
+  margin: 10px;
   background: rgba(0, 0, 0, 0.5);
 
   strong {
