OMG, some crazy hacks at 2am... goodnight

--- a/www/css/main.css
+++ b/www/css/main.css
@@ -18,8 +18,13 @@ html {
   background: url(https://i.imgur.com/HFDc8be.jpg) no-repeat center center fixed;
   background-size: cover;
 }
-body {
+body.aligned {
   height: 100vh;
+}
+body.aligned article {
+  position: relative;
+  top: 50%;
+  transform: translateY(-50%);
 }
 * {
   color: white;
@@ -28,9 +33,6 @@ article {
   background: rgba(0, 0, 0, 0.75);
   max-width: 850px;
   margin: 0 auto;
-  position: relative;
-  top: 50%;
-  transform: translateY(-50%);
 }
 article header {
   padding: 20px;
