--- a/ksiazka/assets/css/main.css
+++ b/ksiazka/assets/css/main.css
@@ -733,6 +733,8 @@
 			#main .avatar img {
 				display: block;
 				margin: 0 auto;
+				width: 130px;
+				height: 130px;
 				border-radius: 100%;
 				box-shadow: 0 0 0 1.5em #ffffff;
 			}
